# creditpy

./: .pypirc  LICENSE.txt  README.md  __init__.py  adjusted_herfindahl_hirschman_index.py  anchor_point.py  bayesian_calibration.py  binomial_test.py  correlation_cluster.py  gini_univariate_data.py  kfold_cross_validation_glm.py  kolmogorov_smirnov.py  na_checker.py  na_filler_contvar.py  pyproject.toml  regression_calibration.py  scaled_score.py  setup.py  time_series_gini.py  train_test_balanced_split.py  usage.py  variable_clustering.py  variable_clustering_gini.py
creditpy/: __init__.py  adjusted_binomial_test.py  calculate_gini.py  chisquare_test.py  gini_elimination.py  gini_univariate.py  herfindahl_hirschman_index.py  iv_calc.py  iv_calc_data.py  iv_elimination.py  load_german_credit_data.py  master_scale.py  max_gini_model.py  missing_elimination.py  missing_ratio.py  psi_calc_data.py  ssi_calc_data.py  summary_default_flag.py  train_test_split.py  vif_calc.py  woe.py  woe_glm_feature_importance.py
creditpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
creditpy/data/: german_credit.csv
