[tool.poetry]
name = "creditpy"
version = "2.7"
description = "A package for credit scoring analysis"
authors = ["Ayhan Dis <disayhan@gmail.com>"]
homepage = "https://github.com/ayhandis/creditpy"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "==2.2.0"
numpy = "==1.26.4"
scikit-learn = "==1.4.0"
statsmodels = "==0.14.1"
scipy = "==1.12.0"
gap_stat = "==2.0.3"
scikit-learn-extra = "==0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
